@@ -31,6 +31,11 @@ stdlib__arrayLabels.cmx : \
     stdlib__arrayLabels.cmi
 stdlib__arrayLabels.cmi : \
     stdlib__seq.cmi
+stdlib__atomic.cmo : \
+    stdlib__atomic.cmi
+stdlib__atomic.cmx : \
+    stdlib__atomic.cmi
+stdlib__atomic.cmi :
 stdlib__bigarray.cmo : \
     stdlib__sys.cmi \
     stdlib__complex.cmi \
